--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -105,3 +105,11 @@ footer {
 .form-signup .alert-devise {
   top:-15%;
 }
+.list-group img {
+  max-width: 100%;
+  display: block;
+   margin: 5px auto;
+}
+pre {
+  white-space: pre;
+}
