--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -1,16 +1,18 @@
-<div class="index-header d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white box-shadow">
-  <h4 class="my-0 mr-md-auto font-weight-normal">
-    <strong>K-comment</strong><br>
+<div class="index-header d-flex flex-column flex-md-row align-items-center p-2 px-md-4 bg-white box-shadow">
+  <h4 class="my-0 mr-md-auto font-weight-normal text-center text-lg-left">
+    <a class="logo-text" href="http://k-comment.ru"><strong>K-comment</strong></a><br>
     <small>сервис избранных товаров</small>
   </h4>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="/#service">О сервисе</a>
     <a class="p-2 text-dark" href="/index-setup">Настройка</a>
     <a class="p-2 text-dark" href="/#price">Стоимость</a>
-<a class="p-2 text-dark" href="/#o-nas">О нас</a>
+    <a class="p-2 text-dark" href="/#o-nas">О нас</a>
   </nav>
-  <%= link_to "Log in", new_session_path('user'), class: 'btn btn-primary' %>
-  <%= link_to "Sign up", new_registration_path('user'), class: 'btn btn-outline-primary' %>
+  <div class="clearfix">
+  <%= link_to t('log_in'), new_session_path('user'), class: 'btn btn-primary float-left' %>
+  <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary float-right' %>
+  </div>
 </div>
 <section class="page-section mb-0" id="setup">
   <div class="container">
