--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
     <footer class="pt-4 pt-md-5">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-md">
+          <div class="col-12 col-sm-3 text-center text-lg-left">
             <h5>K-comment</h5>
             <h6>сервис избранных товаров</h6>
             <ul class="list-unstyled text-small">
@@ -113,10 +113,11 @@
               <li>
                 <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
               </li>
+              <li class="pt-1 d-block d-sm-none"><%= image_tag "/visa-master.png", style:"max-width: 120px;"%></li>
             </ul>
-            <small class="d-block mb-3 text-muted">&copy; 2019</small>
+            <small class="d-block mb-3 text-muted">&copy; 2019-2020</small>
           </div>
-          <div class="col-3 col-md">
+          <div class="col-3 col-md d-none d-md-block">
             <h5>Меню</h5>
             <ul class="list-unstyled text-small">
               <li>
@@ -133,7 +134,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-3 col-md">
+          <div class="col-3 col-md d-none d-md-block">
             <h5>Способы оплаты</h5>
             <ul class="text-small">
               <li>Счет для юр лиц</li>
@@ -143,7 +144,7 @@
               <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
             </p>
           </div>
-          <div class="col-3 col-md">
+          <div class="col-3 col-md d-none d-md-block">
             <h5>Наши данные</h5>
             <ul class="list-unstyled text-small">
               <li>ИП Эмексизов Панаёт Алексеевич</li>
