--- a/app/views/insints/_form.html.erb
+++ b/app/views/insints/_form.html.erb
@@ -8,11 +8,19 @@
     <%= f.input :password, label: 'Пароль из настроек' , required: true , input_html: { value: @insint.password , type: 'text'}%>
     <%= f.input :subdomen, label: 'Домен из настроек'  %>
     <%= f.input :insalesid, :as => :hidden %>
+    <% if current_admin %>
+    <%= f.association :user, label: 'Домен (пользователь)'  %>
+    <% else %>
     <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id } %>
+    <% end %>
   </div>
 
   <div class="btn-group mt-5">
     <%= f.button :submit, 'Сохранить', class: 'btn btn-success'  %>
+    <% if current_admin %>
+    <%= link_to 'Назад', adminindex_insints_path, class: 'btn btn-outline-primary'  %>
+      <% else %>
     <%= link_to 'Назад', useraccounts_path, class: 'btn btn-outline-primary'  %>
+    <% end %>
   </div>
 <% end %>
