--- a/app/views/insints/show.html.erb
+++ b/app/views/insints/show.html.erb
@@ -19,5 +19,10 @@
 
 <div class="col-2 btn-group mt-5">
 <%= link_to 'Редактировать', edit_insint_path(@insint), class: 'btn btn-success'%>
-<%= link_to 'Назад', useraccounts_path, class: 'btn btn-outline-primary' %>
+<% if current_admin %>
+<%= link_to 'Назад', adminindex_insints_path, class: 'btn btn-outline-primary'  %>
+  <% else %>
+<%= link_to 'Назад', useraccounts_path, class: 'btn btn-outline-primary'  %>
+<% end %>
+
 </div>
